<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    android:background="#ECEFF1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorText"
        android:gravity="center|start"
        android:layout_margin="5dp"
        android:padding="9dp"
        android:hint="@string/edit_text_phone"
        android:textColorHint="@color/colorBlack"
        android:inputType="phone"
        android:textColor="@color/colorBlack"/>
    <Button
        android:id="@+id/button_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_call"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:background="@color/colorButton"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/button_dial_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_dial_pad"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:background="@color/colorButton"
        android:layout_margin="5dp"  />
    <Button
        android:id="@+id/button_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_contact"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:background="@color/colorButton"
        android:layout_margin="5dp" />
    <Button
        android:id="@+id/button_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_browser"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:background="@color/colorButton"
        android:layout_margin="5dp"  />
    <Button
        android:id="@+id/button_call_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_call_log"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:background="@color/colorButton"
        android:layout_margin="5dp"  />
    <Button
        android:id="@+id/button_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_gallery"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:background="@color/colorButton"
        android:layout_margin="5dp"  />
    <Button
        android:id="@+id/button_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_camera"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:background="@color/colorButton"
        android:layout_margin="5dp"/>
</LinearLayout>